syntax = "proto3";

package shell;

option go_package = "remote-shell-rpc/proto";

// ShellService định nghĩa RPC service cho remote shell execution
service ShellService {
  // ExecuteCommand thực thi một lệnh và trả về kết quả
  rpc ExecuteCommand(CommandRequest) returns (CommandResponse);
  
  // ExecuteCommandStream thực thi lệnh và stream output real-time
  rpc ExecuteCommandStream(CommandRequest) returns (stream CommandOutput);
  
  // InteractiveShell tạo interactive shell session
  rpc InteractiveShell(stream ShellInput) returns (stream ShellOutput);
  
  // ListSessions liệt kê các session đang active
  rpc ListSessions(Empty) returns (SessionList);
  
  // KillSession kết thúc một session
  rpc KillSession(SessionRequest) returns (SessionResponse);
}

// CommandRequest chứa thông tin lệnh cần thực thi
message CommandRequest {
  string command = 1;           // Lệnh cần thực thi
  repeated string args = 2;      // Các tham số
  string working_dir = 3;        // Thư mục làm việc
  map<string, string> env = 4;   // Biến môi trường
  string session_id = 5;         // ID session (optional)
}

// CommandResponse chứa kết quả thực thi lệnh
message CommandResponse {
  int32 exit_code = 1;          // Exit code
  string stdout = 2;           // Standard output
  string stderr = 3;            // Standard error
  string session_id = 4;        // Session ID được tạo
  int64 execution_time_ms = 5;  // Thời gian thực thi (ms)
}

// CommandOutput stream output từ lệnh
message CommandOutput {
  string data = 1;              // Output data
  bool is_stderr = 2;           // true nếu là stderr
  bool is_eof = 3;              // true nếu kết thúc
  int32 exit_code = 4;          // Exit code (chỉ có khi is_eof = true)
}

// ShellInput input từ client cho interactive shell
message ShellInput {
  string session_id = 1;        // Session ID
  string input = 2;             // Input data (command hoặc data)
  bool is_eof = 3;              // true nếu client muốn đóng session
}

// ShellOutput output từ server cho interactive shell
message ShellOutput {
  string session_id = 1;        // Session ID
  string output = 2;            // Output data
  bool is_stderr = 3;           // true nếu là stderr
  bool is_eof = 4;              // true nếu session đã đóng
}

// SessionRequest request cho session operations
message SessionRequest {
  string session_id = 1;        // Session ID
}

// SessionResponse response cho session operations
message SessionResponse {
  bool success = 1;             // Thành công hay không
  string message = 2;           // Thông báo
}

// SessionList danh sách các session
message SessionList {
  repeated SessionInfo sessions = 1;
}

// SessionInfo thông tin về một session
message SessionInfo {
  string session_id = 1;       // Session ID
  string client_address = 2;     // Địa chỉ client
  int64 created_at = 3;          // Timestamp tạo session
  bool is_active = 4;            // Session có đang active không
}

// Empty message cho các RPC không cần parameter
message Empty {}

